Changelog for Weeder

    #11, optimise execution speed (~3x faster)
0.1.6
    #10, find files generated by alex/happy
0.1.5
    If --yaml and no hints give no output
0.1.4
    #9, allow --dist-dir to set the stack dist-dir
    Deal with operators including | in them
    Allow arrays of arrays of strings in the .weeder.yaml
0.1.3
    #5, document how to install weeder
    #8, detect unused imports, even import Foo()
    #7, don't say modules with only instances are always redundant
    #6, don't give partial pattern matches when reading .weeder.yaml
0.1.2
    #3, deal with space-separated hs-source-dirs
0.1.1
    #2, use "stack query" rather than parsing stack.yaml
0.1
    Initial version