@@ -6,6 +6,7 @@ module Util(
     parseHanging,
     parseHanging2, unindent2,
     (?:),
+    isHaskellCtor,
     isHaskellSymbol,
     reachable,
     isPathsModule
@@ -58,6 +59,9 @@ isHaskellSymbol :: Char -> Bool
 isHaskellSymbol x =
     x `elem` ("!#$%&*+./<=>?@\\^|-~" :: String) ||
     (isSymbol x && x `notElem` ("\"'_(),;[]`{}" :: String))
+
+isHaskellCtor :: IdentName -> Bool
+isHaskellCtor = maybe False (\(x,_) -> isUpper x || x == ':') . S.uncons
 
 
 -- | Given a list of mappings, and an initial set, find which items can be reached
