@@ -1,5 +1,6 @@
 Changelog for Weeder
 
+    #15, tone down unused import if exporting a cross-package type
     #11, optimise execution speed (~3x faster)
 0.1.6
     #10, find files generated by alex/happy
